--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+body,
+html {
+  @apply bg-dark-1;
+}
+
 /* input[type="file"]::file-selector-button {
   display: none;
 }
