added thread, activity and comment pages

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,11 @@ html {
 }
 
 @layer components {
+  /* Image Lazy Load */
+  .lazy-loader {
+    @apply w-9 h-9 rounded-half inline-block border-t-4 border-t-light-1/50 border-r-4 border-r-transparent box-border animate-spin !important;
+  }
+
   /* main */
   .main-container {
     @apply flex min-h-screen flex-col items-center mx-auto px-6 pt-20 sm:px-10 xl:w-[700px] md:w-[650px] w-full bg-dark-1;
@@ -20,7 +25,7 @@ html {
 
   /* Activity */
   .activity-card {
-    @apply flex items-center gap-2 rounded-md bg-dark-2 px-7 py-4;
+    @apply flex items-center gap-4 py-2;
   }
 
   /* No Result */
@@ -200,9 +205,9 @@ html {
 }
 
 /* Thread create */
-[role="dialog"] button svg {
+/* [role="dialog"] button svg {
   @apply hidden;
-}
+} */
 
 /* Profile Tabs */
 div[role="tabpanel"][data-state="inactive"] {
@@ -210,6 +215,10 @@ div[role="tabpanel"][data-state="inactive"] {
 }
 
 /* Carousel Classes */
+.carousel-btn_comment {
+  @apply bg-dark-4/70 border-none text-light-1 mx-14 h-8 w-8 opacity-0 group-hover:opacity-100 hover:bg-dark-1/90 transition-all duration-75 !important;
+}
+
 .carousel-btn {
   @apply bg-dark-4 border-none text-gray-1 -ml-10 h-12 w-12 opacity-0 group-hover:opacity-100 hover:bg-gray-1/30 hover:text-light-1/50 transition-all duration-75 !important;
 }
@@ -219,11 +228,11 @@ div[role="tabpanel"][data-state="inactive"] {
 }
 
 .carousel-card {
-  @apply p-0 w-fit h-full border-0 bg-transparent !important;
+  @apply p-0 w-full max-w-fit h-full border-0 bg-transparent !important;
 }
 
 .carousel-card_content {
-  @apply bg-transparent relative h-[430px] w-full rounded-lg border-none p-0 flex gap-0 !important;
+  @apply bg-transparent relative w-full max-w-max rounded-lg border-none p-0 flex gap-0 !important;
 }
 
 /* Loading Spinners */
@@ -256,5 +265,39 @@ div[role="tabpanel"][data-state="inactive"] {
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+.ripple-loader {
+  width: 48px;
+  height: 48px;
+  display: inline-block;
+  position: relative;
+}
+.ripple-loader::after,
+.ripple-loader::before {
+  content: "";
+  box-sizing: border-box;
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  border: 2px solid #fff;
+  position: absolute;
+  left: 0;
+  top: 0;
+  animation: rippleLoader 2s linear infinite;
+}
+.ripple-loader::after {
+  animation-delay: 1s;
+}
+
+@keyframes rippleLoader {
+  0% {
+    transform: scale(0);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0;
   }
 }
