--- a/app/globals.css
+++ b/app/globals.css
@@ -115,6 +115,15 @@ html {
   .rightsidebar {
     @apply sticky right-0 top-0 z-20 flex h-screen w-fit flex-col justify-between gap-12 overflow-auto border-l border-l-dark-4 bg-dark-2 px-10 pb-6 pt-28 max-xl:hidden;
   }
+
+  /* Thread Card Menu Options */
+  .thread-card-popover {
+    @apply bg-dark-4 outline-none border-none max-w-[210px] p-0 rounded-xl !important;
+  }
+
+  .thread-card-popover_item {
+    @apply py-3 px-6 w-full cursor-pointer !important;
+  }
 }
 
 @layer utilities {
@@ -204,10 +213,18 @@ html {
   @apply relative h-6 w-6 rounded-full hover:bg-dark-2 transition-all duration-75 !important;
 }
 
-/* Thread create */
-/* [role="dialog"] button svg {
+/* Delete Card */
+.delete-dialog-content {
+  @apply sm:max-w-[280px] sm:max-h-[185px] outline-none border border-gray-1/30 rounded-2xl bg-dark-2 p-0 !important;
+}
+
+.delete-dialog-content_btn {
+  @apply flex justify-center items-center flex-1 w-full h-10 py-2 bg-transparent rounded-none !important;
+}
+/* remove Cross from card */
+.delete-dialog-content button svg {
   @apply hidden;
-} */
+}
 
 /* Profile Tabs */
 div[role="tabpanel"][data-state="inactive"] {
